RESOLVED FIXED34685
[Haiku] Fix various problems in mouse/wheel/keyboard event propagation
https://bugs.webkit.org/show_bug.cgi?id=34685
Summary [Haiku] Fix various problems in mouse/wheel/keyboard event propagation
Stephan Aßmus
Reported 2010-02-06 14:29:44 PST
* Some compiler warnings were fixed. * Wrong coordinates were extracted from the Haiku event BMessage, resulting in an offset for mouse moved events. * Improved the compatibility of keyboard events. * Use the correct code for the tab/backspace key in EventHandlerHaiku.cpp and fix the build by not including PlatformScrollBar.h * Generate a correct timestamp for mouse/wheel events. The value is documented as being in seconds. * Fill the modifier flags in mouse/wheel events.
Attachments
Various fixes to mouse/wheel/keyboard event propagation on Haiku (12.79 KB, patch)
2010-02-06 14:31 PST, Stephan Aßmus
eric: commit-queue-
Fix various issues of PlatformMouseEventHaiku.cpp (3.43 KB, patch)
2010-02-17 23:34 PST, Stephan Aßmus
no flags
Some fixes to PlatformWheelEventHaiku.cpp (2.65 KB, patch)
2010-02-17 23:42 PST, Stephan Aßmus
no flags
Fixes to PlatformKeyboardEventHaiku.cpp (8.02 KB, patch)
2010-02-17 23:53 PST, Stephan Aßmus
no flags
Various improvements to EventHandlerHaiku.cpp (4.92 KB, patch)
2010-02-18 00:08 PST, Stephan Aßmus
no flags
Stephan Aßmus
Comment 1 2010-02-06 14:31:35 PST
Created attachment 48298 [details] Various fixes to mouse/wheel/keyboard event propagation on Haiku Patch against r54275, but touches only Haiku code.
Eric Seidel (no email)
Comment 2 2010-02-10 13:30:11 PST
Comment on attachment 48298 [details] Various fixes to mouse/wheel/keyboard event propagation on Haiku 39 #include <stdio.h> seems wrong. The EWS bots seem to think this patch does not apply. Marking it cq-.
Ryan Leavengood
Comment 3 2010-02-14 11:06:21 PST
Hi Eric, What is the next step on this now? Remove the #include <stdio.h> line and make a new patch against the latest WebKit? Though considering this only touches Haiku-specific files it should not matter what version of WebKit a patch is made against since no one else is touching our port. I'm also a bit confused as to why the EWS bots would think this patch does not apply, since again it only touches our port code. Assuming that happens again can someone apply this manually?
Eric Seidel (no email)
Comment 4 2010-02-17 15:52:40 PST
You can click on the purple bubbles to see the EWS bot results: Failed to run "['/mnt/git/webkit-chromium-ews/WebKitTools/Scripts/svn-apply', '--force']" exit_code: 1 patching file WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebCore/page/haiku/EventHandlerHaiku.cpp patching file WebCore/platform/haiku/PlatformKeyboardEventHaiku.cpp patching file WebCore/platform/haiku/PlatformMouseEventHaiku.cpp patching file WebCore/platform/haiku/PlatformWheelEventHaiku.cpp Hunk #3 FAILED at 40. 1 out of 3 hunks FAILED -- saving rejects to file WebCore/platform/haiku/PlatformWheelEventHaiku.cpp.rej
Stephan Aßmus
Comment 5 2010-02-17 23:34:56 PST
Created attachment 48973 [details] Fix various issues of PlatformMouseEventHaiku.cpp Smaller patch covering just PlatformMouseEventHaiku.cpp. Patch is against r54932.
Stephan Aßmus
Comment 6 2010-02-17 23:42:28 PST
Created attachment 48976 [details] Some fixes to PlatformWheelEventHaiku.cpp Smaller patch for just the PlatformWheelEventHaiku.cpp fixes.
Stephan Aßmus
Comment 7 2010-02-17 23:53:49 PST
Created attachment 48977 [details] Fixes to PlatformKeyboardEventHaiku.cpp Smaller patch for just PlatformKeyboardEventHaiku.cpp. Patch against r54932.
Stephan Aßmus
Comment 8 2010-02-18 00:08:59 PST
Created attachment 48979 [details] Various improvements to EventHandlerHaiku.cpp Smaller patch for just EventHandlerHaiku.cpp. Patch against r54938. Compared to the original patch, the methods have been implemented according to the Gtk port, and the non-implemented passSubframeEventToSubframe() method, which all the other methods called, has been removed.
Eric Seidel (no email)
Comment 9 2010-02-22 13:29:41 PST
Comment on attachment 48973 [details] Fix various issues of PlatformMouseEventHaiku.cpp OK. mostly rs=me.
Eric Seidel (no email)
Comment 10 2010-02-22 13:30:32 PST
Comment on attachment 48976 [details] Some fixes to PlatformWheelEventHaiku.cpp These tiny patches are *sooooo* much easier to review, thank you!
Eric Seidel (no email)
Comment 11 2010-02-22 13:32:48 PST
Comment on attachment 48977 [details] Fixes to PlatformKeyboardEventHaiku.cpp Sad that this same code is copy/paste in all 3 platform events: int32 modifiers = message->FindInt32("modifiers"); 351 m_shiftKey = modifiers & B_SHIFT_KEY; 352 m_ctrlKey = modifiers & B_COMMAND_KEY; 353 m_altKey = modifiers & B_CONTROL_KEY; 354 m_metaKey = modifiers & B_OPTION_KEY; Looks good.
Eric Seidel (no email)
Comment 12 2010-02-22 13:34:39 PST
Comment on attachment 48979 [details] Various improvements to EventHandlerHaiku.cpp OK.
WebKit Commit Bot
Comment 13 2010-02-22 17:29:14 PST
Comment on attachment 48973 [details] Fix various issues of PlatformMouseEventHaiku.cpp Clearing flags on attachment: 48973 Committed r55116: <http://trac.webkit.org/changeset/55116>
WebKit Commit Bot
Comment 14 2010-02-23 01:15:04 PST
Comment on attachment 48976 [details] Some fixes to PlatformWheelEventHaiku.cpp Clearing flags on attachment: 48976 Committed r55130: <http://trac.webkit.org/changeset/55130>
WebKit Commit Bot
Comment 15 2010-02-23 03:10:02 PST
Comment on attachment 48977 [details] Fixes to PlatformKeyboardEventHaiku.cpp Clearing flags on attachment: 48977 Committed r55138: <http://trac.webkit.org/changeset/55138>
WebKit Commit Bot
Comment 16 2010-02-23 04:53:13 PST
Comment on attachment 48979 [details] Various improvements to EventHandlerHaiku.cpp Clearing flags on attachment: 48979 Committed r55145: <http://trac.webkit.org/changeset/55145>
WebKit Commit Bot
Comment 17 2010-02-23 04:53:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.