2010-02-22  Stephan Aßmus  <superstippi@gmx.de>

Reviewed by Eric Seidel.

        Fix various issues in PlatformMouseEventHaiku.
        https://bugs.webkit.org/show_bug.cgi?id=34685

        Covered by existing tests.

        Mapping Haiku button constants (bit field) to WebCore buttons was broken.
        Extracting event time was broken (supposed to be in seconds).
        Wrong coordinate was being extracted, needs to be content local.
        Added extracting modifier key flags.

        * platform/haiku/PlatformMouseEventHaiku.cpp:
        (WebCore::PlatformMouseEvent::PlatformMouseEvent):

git-svn-id: svn://svn.chromium.org/blink/trunk@55116 bbb929c8-8fbe-4397-9dbb-9b2b20218538